--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,3 +3,7 @@
 @import 'tailwindcss/components';
 /* purgecss end ignore */
 @import 'tailwindcss/utilities';
+
+.bg-blue-500 {
+  background-color: #2a4082;
+}
